--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "twbs/bootstrap": "4.1.3",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "whiteoctober/tcpdf-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
